# ai-signal-router

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  TODOS.md  alembic.ini  docker-compose.yml  pyproject.toml  railway.toml  requirements-e2e.txt  requirements.txt  start.sh
.claude/: settings.json
alembic/: env.py
docs/: API_ENDPOINTS.md  ARCHITECTURE.md  CRYPTO_WEBHOOK_PARITY_REPORT.md  DATABASE_SCHEMA.md  DEPLOYMENT_GUIDE.md  DESIGN_SYSTEM.md  FRONTEND_ARCHITECTURE.md  FRONTEND_SETUP.md  PRODUCT_FEATURES.md  PRODUCT_ROADMAP.md  SECURITY_REQUIREMENTS.md  SPEC.md  TESTING_STRATEGY.md  USER_STORIES.md  WEBHOOK_PAYLOADS.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
scripts/: cleanup_staging_beta.py  migrate_beta_users.py  migrate_users_to_supabase.py  seed_marketplace.py
src/: main.py
tests/: conftest.py  qa_helpers.py  test_admin.py  test_backfill.py  test_connection_events.py  test_deploy_health_api.py  test_deploy_snapshot.py  test_dev_endpoints.py  test_dispatch_signal.py  test_exceptions.py  test_logging_config.py  test_mapper.py  test_marketplace.py  test_models.py  test_multi_user_listener.py  test_normalize_enabled_actions.py  test_notifications.py  test_openai_parser.py  test_parse_preview.py  test_parser.py  test_parser_fixtures.py  test_proxy_provider.py  test_qstash.py  test_qstash_auth.py  test_rate_limit_ip.py  test_redis.py  test_repositories.py  test_routes.py  test_routes_full.py  test_security.py  test_telegram.py  (+7 more)
(+214 files in other folders)
