[project]
name = "sgm-telegram-copier"
version = "1.0.0"
description = "Telegram Signal Copier for SageMaster"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=src --cov-report=term-missing --cov-report=html"
markers = [
    "e2e: end-to-end tests that run against live staging environment",
    "playwright: tests that require Playwright browser automation",
    "slow: tests with non-deterministic latency (e.g., OpenAI API calls)",
]
